# web-mcp

./: .dockerignore  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  analytics.py  app.py  benchmark.py  config.py  finetune_reranker.py  pyproject.toml  rag.py  requirements.txt  reranker.py
.github/workflows/: ci.yml
examples/: README.md  curl_examples.sh  python_client.py
tests/: __init__.py  conftest.py  test_analytics.py  test_app.py  test_config.py  test_rag.py  test_reranker.py
